k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oj-mysql
  labels:
    app: oj-mysql
spec:
  replicas: 0
  selector:
    matchLabels:
      app: oj-mysql
  template:
    metadata:
      name: oj-mysql
      labels:
        app: oj-mysql
    spec:
      containers:
        - name: oj-mysql
          image: mysql:8.0.39
          imagePullPolicy: IfNotPresent
#         Pod 中的持久化卷选择使用哪个
          volumeMounts:
#         对应到容器内部 mysql 数据存储的位置
            - mountPath: /var/lib/mysql
              name: mysql-storage
          ports:
            - containerPort: 3306
      restartPolicy: Always
#     Pod 级别有哪些持久化卷
      volumes:
        - name: mysql-storage
#     实际上是对存储资源的一个请求 意味着 mysql-storage 这个卷实际上使用了 oj-mysql-storage 这个声明中所指向的资源
          persistentVolumeClaim:
            claimName: oj-mysql-storage
#        - name: hadoop-storage
#          persistentVolumeClaim:
#            claimName: hadoop-storage
