k8s-oj-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlinejudge
# specification 描述我的 Pod 应该是怎样的
spec:
# 副本数量
  replicas: 0
# 筛选器 从所有 Pod 中如何知道哪些是我要去管理的
  selector:
    matchLabels:
      app: onlinejudge
# template 描述的是你的每一个 Pod 是什么样的
  template:
    metadata:
      labels:
        app: onlinejudge
    spec:
      containers:
        - name: onlinejudge
          image: crazyfran/onlinejudge:v0.0.1
          ports:
            - containerPort: 9090
