k8s-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oj-redis
  labels:
    app: oj-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oj-redis
  template:
    metadata:
      name: oj-redis
      labels:
        app: oj-redis
    spec:
      containers:
        - name: oj-redis
          image: redis:7.0.15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
