k8s-oj-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlinejudge
spec:
  type: LoadBalancer
  selector:
    app: onlinejudge
  ports:
    - protocol: TCP
      port: 81
      targetPort: 9090
