k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oj-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
# 告诉 k8s 要用 nginx
  ingressClassName: nginx
  rules:
    - host: qiyi.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlinejudge
                port:
                  number: 81
